[package]
name = "rowser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "=0.14.0"
gfx_text = "=0.15.0"
gfx_window_glutin = "=0.14.0"
glutin = "=0.7.1"
freetype = "=0.1.0"

[build-dependencies]
pkg-config = "0.3.19"

[[bin]]
name = "main"
path = "bin/main.rs"